Fixed vertical spacing on home and about pages.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -101,7 +101,7 @@ footer {
 /* Home Page */
 .index-container {
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: auto 1fr;
   min-height: 100vh;
   width: 100%;
   height: auto;
@@ -133,16 +133,12 @@ footer {
 /* About Page */
 .about-container {
   display: grid;
+  grid-template-rows: auto 1fr;
   min-height: 100vh;
+  height: 100%;
+  width: 100%;
+  height: auto;
 }
-
-.about {
-  display: grid;
-  justify-self: center;
-  align-self: center;
-}
-
-
 
 
 /* Project Page */
